Mon, 03 Dec 2007 21:35:56 +0100 <thp@perli.net>
Update channel navigator when iPod/MP3 player sync has finished

	* src/gpodder/gui.py: Update channel navigator when iPod sync has
	finished, so we can update the "played" status in the channel
	navigator when this status has changed after we've synced ("on sync
	mark played" option)

Mon, 03 Dec 2007 21:24:17 +0100 <thp@perli.net>
Add option to mark episodes as played after transfer to device

	* data/gpodder.glade: Option added to preferences dialog
	* src/gpodder/config.py: Add option "on_sync_mark_played"; will mark
	an episode as played when it gets transferred to a device
	* src/gpodder/gui.py: Glue code for GUI + gpodder.config
	* src/gpodder/libipodsync.py: On sync, mark episode as played if the
	user has selected the "on_sync_mark_played" option
	* TODO: Remove implemented/integrated items

Sat, 01 Dec 2007 15:19:29 +0100 <thp@perli.net>
Fix a fatal bug with first-run that prevents channel list saving

	* src/gpodder/util.py: Always use a file's parent directory to get the
	free disk space and return zero free disk space when the parent
	directory does not exist

Thu, 29 Nov 2007 08:53:36 +0100 <thp@perli.net>
Support for itpc:// URLs

	* src/gpodder/util.py: Add support for adding "itpc://" URLs (these
	are simply http:// URLs with a different schema, for iTunes)

Tue, 27 Nov 2007 22:59:26 +0100 <thp@perli.net>
Draw channel stats (unplayed, downloaded) on channel navigator

	* bin/gpodder: We're in development again, so add "+svn"
	* src/gpodder/draw.py: Added
	* src/gpodder/gui.py: Fix import of renamed "channels_to_model";
	re-assign new column numbers for treeChannels' data model; add
	cell renderer for pill pixbuf and remove cell renderer for status text
	* src/gpodder/libpodcasts.py: Add episode_is_new() function to
	podcastChannel to check if an episode can be considered "new"; use the
	episode_is_new function in get_new_episodes; add get_episode_stats()