@@ -1,3 +1,9 @@
+Tue, 04 Dec 2007 23:28:27 +0100 <thp@perli.net>
+Do grayscale "pill" instead of theme-based colors (for bad themes)
+
+	* src/gpodder/draw.py: Always draw the "pill" in semi-transparent
+	black/grey shades so it will work for all GTK themes (even Ubuntu's)
+
 Mon, 03 Dec 2007 21:35:56 +0100 <thp@perli.net>
 Update channel navigator when iPod/MP3 player sync has finished
 
